--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="scard s1">
               <img
                 class="simg"
-                src="https://hexschool.github.io/flexImgUrl/5/logo-small.png"
+                src="https://firebasestorage.googleapis.com/v0/b/timehouse-dacy.appspot.com/o/timeHouse5-Logo-Small.png?alt=media&token=c019519f-81e2-49fb-bdc2-60ad02e9c216"
                 alt="logo-small"
               />
               <div class="stext">
@@ -27,7 +27,7 @@
             <div class="scard s2">
               <img
                 class="simg"
-                src="https://hexschool.github.io/flexImgUrl/5/logo-small.png"
+                src="https://firebasestorage.googleapis.com/v0/b/timehouse-dacy.appspot.com/o/timeHouse5-Logo-Small.png?alt=media&token=c019519f-81e2-49fb-bdc2-60ad02e9c216"
                 alt="logo-small"
               />
               <div class="stext">
@@ -40,7 +40,7 @@
             <div class="scard s3">
               <img
                 class="simg"
-                src="https://hexschool.github.io/flexImgUrl/5/logo-small.png"
+                src="https://firebasestorage.googleapis.com/v0/b/timehouse-dacy.appspot.com/o/timeHouse5-Logo-Small.png?alt=media&token=c019519f-81e2-49fb-bdc2-60ad02e9c216"
                 alt="logo-small"
               />
               <div class="stext">
@@ -56,7 +56,7 @@
             <div class="mcard m1">
               <img
                 class="mimg"
-                src="https://hexschool.github.io/flexImgUrl/5/logo-medium.png"
+                src="https://firebasestorage.googleapis.com/v0/b/timehouse-dacy.appspot.com/o/timeHouse5-Logo-Medium.png?alt=media&token=0d373f9a-6c7c-42d8-aa97-aa9f741330d0"
                 alt="logo-medium"
               />
               <div class="mtext">
@@ -69,7 +69,7 @@
             <div class="mcard m2">
               <img
                 class="mimg"
-                src="https://hexschool.github.io/flexImgUrl/5/logo-medium.png"
+                src="https://firebasestorage.googleapis.com/v0/b/timehouse-dacy.appspot.com/o/timeHouse5-Logo-Medium.png?alt=media&token=0d373f9a-6c7c-42d8-aa97-aa9f741330d0"
                 alt="logo-medium"
               />
               <div class="mtext">
@@ -82,7 +82,7 @@
             <div class="mcard m3">
               <img
                 class="mimg"
-                src="https://hexschool.github.io/flexImgUrl/5/logo-medium.png"
+                src="https://firebasestorage.googleapis.com/v0/b/timehouse-dacy.appspot.com/o/timeHouse5-Logo-Medium.png?alt=media&token=0d373f9a-6c7c-42d8-aa97-aa9f741330d0"
                 alt="logo-medium"
               />
 
@@ -99,7 +99,7 @@
             <div class="lcard l1">
               <img
                 class="limg1"
-                src="https://hexschool.github.io/flexImgUrl/5/logo-big.png"
+                src="https://firebasestorage.googleapis.com/v0/b/timehouse-dacy.appspot.com/o/timeHouse5-Logo-Big.png?alt=media&token=8e0e48fc-fce0-4c17-89ec-4632119f5dac"
                 alt="logo-big"
               />
               <div class="ltext">
@@ -119,7 +119,7 @@
               </div>
               <img
                 class="limg2"
-                src="https://hexschool.github.io/flexImgUrl/5/logo-big.png"
+                src="https://firebasestorage.googleapis.com/v0/b/timehouse-dacy.appspot.com/o/timeHouse5-Logo-Big.png?alt=media&token=8e0e48fc-fce0-4c17-89ec-4632119f5dac"
                 alt="logo-big"
               />
             </div>
